# temple

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  .yamllint  .yamllint.yml  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CHECKLIST.md  LICENSE  README.md  asv.conf.json  detect_pr6_full_comments.json  setup.py  temple.code-workspace  tmp_asv_conf.json
scripts/ci/: README.md  auto_resolve_reviews.py  benchmarks_quick.sh  create_secrets_baseline.sh  detect_secrets_compare.py  docs_build.sh  ensure_ci_venv.sh  github_app_helpers.py  github_app_manifest.yaml  pyproject.toml  requirements-bench.txt  requirements-docs.txt  requirements-resolver.txt  requirements-tests.txt  requirements.in  requirements.txt  sim_asv_env.py  tests.sh  venv_utils.sh
temple/: BENCHMARKING.md  README.md  asv.conf.json  pyproject.toml  pyrightconfig.json  requirements.txt  temple.code-workspace
temple-linter/: .structure-notes.yaml  README.md  pyproject.toml  requirements.txt  setup.py
temple-linter/docs/: EXTENDING.md  api.rst  conf.py  diagnostics_api.md  index.rst
temple-linter/docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
temple-linter/docs/_build/html/.doctrees/: api.doctree  environment.pickle  (+1 more)
temple-linter/src/: __init__.py
temple-linter/src/temple_linter/: __init__.py  base_format_linter.py  diagnostic_converter.py  diagnostics.py  linter.py  lsp_features.py  lsp_server.py  template_mapping.py  template_preprocessing.py  template_tokenizer.py
temple-linter/src/temple_linter/services/: __init__.py  base_cleaning_contract.py  base_cleaning_policies.py  base_linting_service.py  diagnostic_mapping_service.py  lint_orchestrator.py  projection_snapshot.py  token_cleaning_service.py
temple-linter/tests/: test_base_format_linter.py  test_base_linting_service.py  test_diagnostic_converter.py  test_diagnostics.py  test_e2e_performance.py  test_integration.py  test_linter.py  test_lsp_entrypoint.py  test_lsp_features.py  test_lsp_mvp_smoke.py  test_lsp_transport_wiring.py  test_preprocessing.py  test_projection_snapshot.py  test_semantic_linter.py  test_tokenizer.py
temple-linter/tests/fixtures/: valid_README.md.tmpl  valid_docker_compose.yaml.tmpl  valid_package.json.tmpl  valid_page.html.tmpl
temple-linter/typings/temple/: diagnostics.pyi  lark_parser.pyi  range_utils.pyi  typed_ast.pyi
temple-linter/typings/temple/compiler/: parser.pyi
temple-linter/typings/temple_linter/: base_format_linter.pyi  diagnostic_converter.pyi  linter.pyi  template_preprocessing.pyi
temple-linter/typings/temple_linter/services/: base_linting_service.pyi  diagnostic_mapping_service.pyi  lint_orchestrator.pyi  token_cleaning_service.pyi
temple/asv/benchmarks/: bench_minimal.py  bench_pattern_caching.py  bench_real.py  bench_renderer.py  bench_serializers.py  bench_templates.py  bench_tokenizer_delimiters.py  bench_tokenizer_patterns.py  bench_type_checker.py
temple/docs/: ADAPTER_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  data_format_parsers.md  error_reporting_strategy.md  query_language_and_schema.md  serializers.md  syntax_spec.md
temple/docs/activity-log/: MECHANIZATION.md  README.md  TEMPLATE.md
temple/docs/adr/: 002-consolidate-to-single-parser.md  003-market-role-and-adapter-architecture.md  004-control-flow-closer.md  005-base-lint-strategy-and-diagnostics-pipeline.md  006-template-language-identity-and-diagnostic-ownership.md
temple/docs/release/: ADR003_ADAPTER_SPEC_ANNOUNCEMENT.md
temple/examples/: README.md  invalid_html.html  invalid_json.json  invalid_markdown.md  lint_examples.py  templater_config.yaml  valid_html.html  valid_json.json  valid_markdown.md
temple/src/: __init__.py  linter.py  parser.py
temple/src/temple/: __init__.py  defaults.py  diagnostics.py  expression_eval.py  filter_registry.py  lark_parser.py  range_utils.py  schema_checker.py  template_renderer.py  template_spans.py  template_tokenizer.py  typed_ast.py  typed_grammar.lark  typed_renderer.py  whitespace_control.py
temple/src/temple/adapters/: __init__.py  jinja2_adapter.py
temple/src/temple/compiler/: PROGRESS.md  PROGRESS_ITEM35.md  __init__.py  ast_nodes.py  diagnostics.py  error_formatter.py  parser.py  schema.py  source_map.py  tokenizer.py  type_checker.py  type_errors.py  types.py
temple/src/temple/sdk/: __init__.py  adapter.py
temple/tests/: __init__.py  conftest.py  test_adapter_sdk.py  test_benchmarks.py  test_diagnostics.py  test_error_formatter.py  test_example_templates.py  test_filter_registry.py  test_integration_pipeline.py  test_jinja2_adapter.py  test_lark_parser.py  test_lark_parser_advanced.py  test_mvp_language_core.py  test_schema_checker.py  test_source_map.py  test_template_renderer.py  test_template_spans.py  test_tokenizer.py  test_typed_ast.py  test_typed_structures.py
temple/tests/compiler/: __init__.py  test_diagnostics.py  test_error_formatter.py  test_parser.py  test_schema.py  test_serializers_base.py  test_serializers_html.py  test_serializers_json.py  test_serializers_markdown.py  test_serializers_yaml.py  test_source_map.py  test_type_checker.py  test_types.py
temple/tests/integration/: test_compiler_pipeline.py
temple/tests/parity/: test_native_vs_jinja2_parity.py
temple/tests/parity/fixtures/: filter_argument_undefined.tmpl  manifest.json  missing_property.tmpl  undefined_variable.tmpl  valid_pipeline.tmpl
temple/tests/serializers/: __init__.py  test_serializers_base.py  test_serializers_html.py  test_serializers_json.py  test_serializers_markdown.py  test_serializers_yaml.py
temple/tests/types/: __init__.py  test_schema.py  test_type_checker.py  test_types.py
(+336 files in other folders)
