[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temple-linter"
version = "0.1.0"
description = "Linting and diagnostics for templated files. Integrates with temple and base format linters."

authors = [
	{ name = "Chris Caldwell", email = "chris@calan.co" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temple>=0.1.0",
    "pygls>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "temple[dev]>=0.1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.20",
]
ci = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "detect-secrets>=1.5.0",
    "PyYAML>=6.0",
]

[project.scripts]
temple-linter-lsp = "temple_linter.lsp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["temple_linter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ci]
python-version = "3.11"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["temple", "temple_linter"]
