[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temple"
version = "0.1.0"
description = "Core templating engine for Temple DSL - tokenization, parsing, and rendering of structured data templates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark-parser>=0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-benchmark>=3.4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-benchmark>=3.4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.20",
]
bench = [
    "pytest-benchmark>=3.4.0",
    "asv>=0.6.0",
]
ci = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-benchmark>=3.4.0",
    "ruff>=0.1.0",
    "asv>=0.6.0",
    "detect-secrets>=1.5.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ci]
python-version = "3.11"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["temple"]
